welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:22: error: reassignment to val
while(estFaceMur=true & estSurBiscuit==false){
                ^